logging/fluentd-ds.yaml
# From https://github.com/kubernetes/kubernetes/blob/30f22ad683d1bd6af8979229af3348b356053f1e/cluster/addons/fluentd-elasticsearch/fluentd-es-ds.yaml
# Removed metadata.labels.*kubernetes.io* to prevent the addon-manager from deleting this
# Removed nodeSelector so the pod will actually be scheduled
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: fluentd-es
  labels:
    k8s-app: fluentd-es
    version: v1.22
spec:
  template:
    metadata:
      labels:
        k8s-app: fluentd-es
        version: v1.22
    spec:
      serviceAccountName: fluentd
      containers:
      - name: fluentd-es
        image: gcr.io/google_containers/fluentd-elasticsearch:1.24 
        command:
          - '/bin/sh'
          - '-c'
          - '/usr/sbin/td-agent 2>&1 >> /var/log/fluentd.log'
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
