logging/es-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-logging
  labels:
    component: elasticsearch
    role: client
spec:
  selector:
    component: elasticsearch
    role: client
  ports:
  - name: http
    port: 9200
    protocol: TCP
