logging/kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: logs
  labels:
    k8s-app: kibana
spec:
  ports:
  - port: 5601
    protocol: TCP
    targetPort: ui
  selector:
    k8s-app: kibana
